魔女增加爆发力  萤移除小体型 舞娘增加美乳

--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
       ["3☆异国商人 雪蘭瑚", "水属性", "治疗者", "亚人", "支援", "回复","中体型","领袖"],
       ["3☆高等魔族 法雅", "火属性", "治疗者", "魔族", "领袖", "回复", "支援"],
       ["3☆传说女仆 艾蜜莉", "领袖", "光属性","辅助者","回复", "魔族(?)"],
-      ["3☆千咒魔女 安西莉卡", "领袖", "暗属性","攻击者","人类(?)","亚人(?)","巨乳(?)"], 
+      ["3☆千咒魔女 安西莉卡", "领袖", "暗属性","攻击者","人类(?)","亚人(?)","巨乳(?)","爆发力"], 
       ["3☆元气补给 莲", "领袖", "火属性","治疗者","人类","回复(?)"],
       ["3☆夜星 狄", "领袖", "风属性","攻击者","人类"],
 
@@ -494,8 +494,8 @@
       ["2☆魔法少女 托特拉[238]", "菁英", "光属性", "攻击者", "中体型", "人类", "爆发力", "美乳", "削弱", "输出"],
       ["2☆最后的银龙 普利特拉", "闇属性", "菁英", "妨碍者", "亚人", "中体型", "削弱", "美乳"],
       ["2☆刺针 嘉维尔", "风属性", "攻击者", "菁英", "美乳", "人类", "中体型", "输出"],
-      ["2☆精灵舞者 塔诺西雅", "菁英", "光属性","辅助者","亚人", "回复(?)"],
-      ["2☆工会看板娘 小萤", "菁英",  "水属性","治疗者", "支援", "人类", "贫乳", "小体型"],
+      ["2☆精灵舞者 塔诺西雅", "菁英", "光属性","辅助者","亚人", "回复(?)","美乳"],
+      ["2☆工会看板娘 小萤", "菁英",  "水属性","治疗者", "支援", "人类", "贫乳"],
 
       ["1☆流浪魔法师 尤依[307]", "火属性", "攻击者", "人类", "巨乳", "小体型", "越战越强", "输出"],
       ["1☆龙女 伊维斯[303]", "火属性", "攻击者", "亚人", "贫乳", "小体型", "越战越强", "群体攻击", "输出"],
@@ -759,6 +759,7 @@
       角色词条<br/>
       可点击【领袖】或【支援】按钮查看<br/>
       最新：法雅添加了【支援】词条<br/>
+      魔女增加爆发力  萤移除小体型 舞娘增加美乳<br/>
       更多词条请去贴吧或nga发帖反馈<br/>
     </div>
     NGA论坛天下布魔板块已经正式开放了，<a href="https://nga.178.com/thread.php?fid=-40525887">访问地址</a><br/>
