修正错别字

--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
       ["3☆异国商人 雪蘭瑚", "水属性", "治疗者", "亚人", "支援", "回复","中体型","领袖"],
       ["3☆高等魔族 法雅", "火属性", "治疗者", "魔族", "领袖", "回复", "支援"],
       ["3☆传说女仆 艾蜜莉", "领袖", "光属性","辅助者","回复", "魔族(?)"],
-      ["3☆千咒魔女 安西莉卡", "领袖", "暗属性","攻击者","人类(?)","亚人(?)","巨乳(?)","爆发力"], 
+      ["3☆千咒魔女 安西莉卡", "领袖", "闇属性","攻击者","人类(?)","亚人(?)","巨乳(?)","爆发力"], 
       ["3☆元气补给 莲", "领袖", "火属性","治疗者","人类","回复(?)"],
       ["3☆夜星 狄", "领袖", "风属性","攻击者","人类"],
 
