--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@
       可点击【领袖】或【支援】按钮查看<br/>
       最新：法雅添加了【支援】词条<br/>
       魔女增加爆发力  萤移除小体型 舞娘增加美乳<br/>
-      传说女仆收到了人类的报告<br/>
+      传说女仆收到了疑似人类的报告<br/>
       更多词条请去贴吧或nga发帖反馈<br/>
     </div>
     NGA论坛天下布魔板块已经正式开放了，<a href="https://nga.178.com/thread.php?fid=-40525887">访问地址</a><br/>
