--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
       ["3☆猫娘Vtuber 杏仁咪噜","攻击者","亚人","爆发力","小体型","贫乳","领袖","火属性"],
       ["3☆异国商人 雪蘭瑚", "水属性", "治疗者", "亚人", "支援", "回复","中体型","领袖"],
       ["3☆高等魔族 法雅", "火属性", "治疗者", "魔族", "领袖", "回复", "支援"],
-      ["3☆传说女仆 艾蜜莉", "领袖", "光属性","辅助者","回复", "魔族(25%)","人类(75%)"],
+      ["3☆传说女仆 艾蜜莉", "领袖", "光属性","辅助者","回复","人类", "中体型"],
       ["3☆千咒魔女 安西莉卡", "领袖", "闇属性","攻击者","人类(?)","亚人(?)","巨乳(?)","爆发力"], 
       ["3☆元气补给 莲", "领袖", "火属性","治疗者","人类","回复(?)"],
       ["3☆夜星 狄", "领袖", "风属性","攻击者","人类"],
@@ -686,11 +686,13 @@
 
 
   
-  //<body style="background:rgb(227, 241, 227" id="body">
+  // <body style="background:rgb(230, 230, 250)" id="body">
+  //<body style="background:rgb(227, 241, 227)" id="body">
   </script>
   <script type="text/javascript" language="javascript" src="transform.js"></script>
 
-<body style="background:rgb(230, 230, 250)" id="body">
+
+  <body style="background:rgb(230, 230, 250)" id="body">
 
   <div id="center_box">
     <h1 style="display: inline;">全境征才计算器 3.11 by 小r</h1><small>邀请码 USHL2U</small>
@@ -760,7 +762,7 @@
       可点击【领袖】或【支援】按钮查看<br/>
       最新：法雅添加了【支援】词条<br/>
       魔女增加爆发力  萤移除小体型 舞娘增加美乳<br/>
-      传说女仆收到了疑似人类的报告<br/>
+      传说女仆确认是人类 中体型<br/>
       更多词条请去贴吧或nga发帖反馈<br/>
     </div>
     NGA论坛天下布魔板块已经正式开放了，<a href="https://nga.178.com/thread.php?fid=-40525887">访问地址</a><br/>
