更改排布规律

--- a/index.html
+++ b/index.html
@@ -365,7 +365,15 @@
       var minLV = data[data.length - 1].value[0].substr(0, 1);
       var maxLV = data[0].value[0].substr(0, 1);
       var tagCount = data[0].tags.length;
-      return maxLV + (100 - data.length) + (100 - tagCount);
+      var tmp = 0;
+      if (maxLV==2){
+        for(var i=0;i<data.length;i++){
+          if(data[i].value[0].substr(0,1) == '2')tmp++;
+        }
+      }
+      tmp = 10- data.length + tmp;
+      data.num = maxLV + tmp +(100 - data.length) + (100 - tagCount);
+      return maxLV +tmp +(100 - data.length) + (100 - tagCount);
     }
 
     function initDataSet() {
