舞娘+中体型  夜星+削弱输出

--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
       ["3☆传说女仆 艾蜜莉", "领袖", "光属性","辅助者","回复","人类", "中体型","支援"],
       ["3☆千咒魔女 安西莉卡", "领袖", "闇属性","攻击者","人类(?)","亚人(?)","巨乳(?)","爆发力"], 
       ["3☆元气补给 莲", "领袖", "火属性","治疗者","人类","回复(?)"],
-      ["3☆夜星 狄", "领袖", "风属性","攻击者","人类"],
+      ["3☆夜星 狄", "领袖", "风属性","攻击者","人类","削弱","输出"],
 
       ["2☆魔管家 艾可[209]", "菁英", "闇属性", "魔族", "辅助者", "中体型", "美乳", "支援"],
       ["2☆圣骑士长 雷欧娜[210]", "菁英", "水属性", "人类", "守护者", "美乳", "中体型", "生存力", "保护", "防御"],
@@ -502,7 +502,7 @@
       ["2☆魔法少女 托特拉[238]", "菁英", "光属性", "攻击者", "中体型", "人类", "爆发力", "美乳", "削弱", "输出"],
       ["2☆最后的银龙 普利特拉", "闇属性", "菁英", "妨碍者", "亚人", "中体型", "削弱", "美乳"],
       ["2☆刺针 嘉维尔", "风属性", "攻击者", "菁英", "美乳", "人类", "中体型", "输出"],
-      ["2☆精灵舞者 塔诺西雅", "菁英", "光属性","辅助者","亚人", "回复(?)","美乳","中体型(?)","小体型(?)"],
+      ["2☆精灵舞者 塔诺西雅", "菁英", "光属性","辅助者","亚人", "回复(?)","美乳","中体型"],
       ["2☆工会看板娘 小萤", "菁英",  "水属性","治疗者", "支援", "人类", "贫乳","回复","中体型"],
 
       ["1☆流浪魔法师 尤依[307]", "火属性", "攻击者", "人类", "巨乳", "小体型", "越战越强", "输出"],
@@ -769,8 +769,10 @@
       角色词条<br/>
       可点击【领袖】或【支援】按钮查看<br/>
       最新：法雅添加了【支援】词条<br/>
-      魔女增加爆发力  萤移除小体型添加中体型 舞娘增加美乳 法雅+中体型<br/>
+      魔女增加爆发力  萤移除小体型添加中体型<br/>
+      舞娘增加美乳 法雅+中体型<br/>
       传说女仆确认是人类 中体型 支援<br/>
+      舞娘增加中体型  夜星增加削弱输出<br/>
       更多词条请去贴吧或nga发帖反馈<br/>
     </div>
     NGA论坛天下布魔板块已经正式开放了，<a href="https://nga.178.com/thread.php?fid=-40525887">访问地址</a><br/>
