加入美服新词条

--- a/index.html
+++ b/index.html
@@ -689,7 +689,8 @@
       "输出,领袖,守护者,亚人,妨碍者",  //4.12
       "防御,火属性,越战越强,治疗者,回复",//4.25
       "贫乳,防御,领袖,巨乳,水属性",//22年11.30
-      "风属性,领袖,越战越强,保护,支援"//22年11.30
+      "风属性,领袖,越战越强,保护,支援",//22年11.30
+      "群体攻击,削弱,闇属性,输出,领袖"//12.3
     ];
 
 
