添加新领袖词组

--- a/index.html
+++ b/index.html
@@ -690,7 +690,8 @@
       "防御,火属性,越战越强,治疗者,回复",//4.25
       "贫乳,防御,领袖,巨乳,水属性",//22年11.30
       "风属性,领袖,越战越强,保护,支援",//22年11.30
-      "群体攻击,削弱,闇属性,输出,领袖"//12.3
+      "群体攻击,削弱,闇属性,输出,领袖",//12.3
+      "辅助者,火属性,领袖,亚人,回复" //12.5
     ];
 
 
