--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
       ["3☆高等魔族 法雅", "火属性", "治疗者", "魔族", "领袖", "回复", "支援", "中体型"],
       ["3☆传说女仆 艾蜜莉", "领袖", "光属性","辅助者","回复","人类", "中体型","支援"],
       ["3☆千咒魔女 安西莉卡", "领袖", "闇属性","攻击者","人类(?)","亚人(?)","巨乳(?)","爆发力"], 
-      ["3☆元气补给 莲", "领袖", "火属性","治疗者","人类","回复(?)"],
+      ["3☆元气补给 莲", "领袖", "火属性","治疗者","人类","回复(?)","支援(80%)"],
       ["3☆夜星 狄", "领袖", "风属性","攻击者","人类","削弱","输出"],
 
       ["2☆魔管家 艾可[209]", "菁英", "闇属性", "魔族", "辅助者", "中体型", "美乳", "支援"],
@@ -765,17 +765,9 @@
     <div id="anotation">
     <h1>新词条·新词组收集接近尾声</h1>
     <div style="font-size:22px">
-      新词组：贫乳 防御 领袖 巨乳 水属性<br/>
-      风属性 领袖 越战越强 保护 支援<br/>
-      
       角色词条<br/>
       可点击【领袖】或【支援】按钮查看<br/>
-      最新：法雅添加了【支援】词条<br/>
-      魔女增加爆发力  萤移除小体型添加中体型<br/>
-      舞娘增加美乳 法雅+中体型<br/>
-      传说女仆确认是人类 中体型 支援<br/>
-      舞娘增加中体型  夜星增加削弱输出<br/>
-      更多词条请去贴吧或nga发帖反馈<br/>
+      最新：莲添加了【支援】词条<br/>
     </div>
     NGA论坛天下布魔板块已经正式开放了，<a href="https://nga.178.com/thread.php?fid=-40525887">访问地址</a><br/>
      之前的<a href="https://github.com/RShock/RShock.github.io/blob/master/update.md">更新日志</a><br />
