为雪兰瑚和法雅添加保护词条

--- a/index.html
+++ b/index.html
@@ -483,8 +483,8 @@
       ["3☆现代勇者 神田绫音", "光属性", "攻击者", "人类", "爆发力", "输出", "领袖", "中体型"],
       ["3☆未来勇者 牧爱菈", "风属性", "妨碍者", "人类", "中体型", "削弱", "领袖", "贫乳","支援"],
       ["3☆猫娘Vtuber 杏仁咪噜","攻击者","亚人","爆发力","小体型","贫乳","领袖","火属性"],
-      ["3☆异国商人 雪蘭瑚", "水属性", "治疗者", "亚人", "支援", "回复","中体型","领袖"],
-      ["3☆高等魔族 法雅", "火属性", "治疗者", "魔族", "领袖", "回复", "支援", "中体型"],
+      ["3☆异国商人 雪蘭瑚", "水属性", "治疗者", "亚人", "支援", "回复","中体型","领袖", "保护"],
+      ["3☆高等魔族 法雅", "火属性", "治疗者", "魔族", "领袖", "回复", "支援", "中体型", "保护"],
       ["3☆传说女仆 艾蜜莉", "领袖", "光属性","辅助者","回复","人类", "中体型","支援"],
       ["3☆千咒魔女 安西莉卡", "领袖", "闇属性","攻击者","人类(?)","亚人(?)","巨乳(?)","爆发力","越战越强"], 
       ["3☆元气补给 莲", "领袖", "火属性","治疗者","人类(?)","回复","支援(80%)"],
@@ -771,6 +771,7 @@
       伊布增加了【群体攻击】词条<br/>
       莲的人类词条暂时划为待确定<br/>
       人马女仆压根没在计算器里收录，因为她连辅助者都没有<br/>
+      为雪兰瑚和法雅添加了【保护】<br/>
     </div>
     NGA论坛天下布魔板块已经正式开放了，<a href="https://nga.178.com/thread.php?fid=-40525887">访问地址</a><br/>
      之前的<a href="https://github.com/RShock/RShock.github.io/blob/master/update.md">更新日志</a><br />
