--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
       ["3☆魔王 巴尔[101]", "领袖", "火属性", "魔族", "中体型", "攻击者", "爆发力", "输出"],
       ["3☆魔王 撒旦[102]", "领袖", "闇属性", "魔族", "中体型", "守护者", "生存力", "回击","巨乳", "防御"],
       ["3☆精灵王 赛露西亚[104]", "领袖", "风属性", "亚人", "中体型", "巨乳(?)", "辅助者", "爆发力", "支援"],
-      ["3☆矮人王 兰儿[105]", "领袖", "水属性", "亚人", "小体型", "贫乳", "攻击者", "爆发力", "输出"],
+      ["3☆矮人王 兰儿[105]", "领袖", "水属性", "亚人", "小体型", "贫乳", "攻击者", "爆发力","越战越强", "输出"],
       ["3☆法斯公主 露露[106]", "领袖", "风属性", "人类", "治疗者", "回复"],
       ["3☆魔王 伊布力斯[103]", "领袖", "光属性", "魔族", "中体型", "攻击者", "生存力", "输出", "群体攻击"],
       ["3☆蛇女之后 梅斯米奈雅[137]", "领袖", "火属性", "妨碍者", "爆发力", "贫乳", "魔族", "干扰(?)", "削弱", "中体型"],
