--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
       ["3☆堕龙 凯西菲娜", "水属性", "守护者", "领袖", "亚人", "中体型", "巨乳", "防御", "回击", "生存力(?)"],
       ["3☆极乐之鬼 伊吹朱点", "火属性", "攻击者", "领袖", "中体型", "输出", "亚人", "贫乳"],
       ["3☆音速魅影 祈", "风属性", "攻击者", "亚人", "中体型", "领袖", "输出", "爆发力"],
-      ["3☆古代勇者 乌鲁塔", "风属性", "守护者", "人类", "中体型", "领袖"],
+      ["3☆古代勇者 乌鲁塔", "风属性", "守护者", "人类", "中体型", "领袖","保护"],
       ["3☆现代勇者 神田绫音", "光属性", "攻击者", "人类", "爆发力", "输出", "领袖", "中体型"],
       ["3☆未来勇者 牧爱菈", "风属性", "妨碍者", "人类", "中体型", "削弱", "领袖", "贫乳","支援"],
       ["3☆猫娘Vtuber 杏仁咪噜","攻击者","亚人","爆发力","小体型","贫乳","领袖","火属性"],
