--- a/index.html
+++ b/index.html
@@ -470,10 +470,10 @@
       ["3☆法斯公主 露露[106]", "领袖", "风属性", "人类", "治疗者", "回复"],
       ["3☆魔王 伊布力斯[103]", "领袖", "光属性", "魔族", "中体型", "攻击者", "生存力", "输出", "群体攻击"],
       ["3☆蛇女之后 梅斯米奈雅[137]", "领袖", "火属性", "妨碍者", "爆发力", "贫乳", "魔族", "干扰(?)", "削弱", "中体型"],
-      ["3☆KS-VIII 魔人偶[131]", "闇属性", "攻击者", "领袖", "爆发力", "输出", "中体型"],
+      ["3☆KS-VIII 魔人偶[131]", "闇属性", "攻击者", "领袖", "爆发力", "输出", "巨乳(?)", "中体型"],
       ["3☆煌星 妲斯艾菲娜[157]", "闇属性", "辅助者", "领袖", "人类", "中体型", "贫乳", "支援"],
-      ["3☆复生公主 千鹤[128]", "风属性", "攻击者", "领袖", "爆发力", "输出", "中体型", "魔族"],
-      ["3☆天使长 圣米勒[107]", "光属性", "中体型", "攻击者", "领袖", "亚人(?)", "支援", "输出(?)"],
+      ["3☆复生公主 千鹤[128]", "风属性", "攻击者", "领袖", "爆发力", "输出", "中体型", "巨乳(?)", "魔族"],
+      ["3☆天使长 圣米勒[107]", "光属性", "中体型", "攻击者", "领袖", "亚人(?)", "支援","巨乳(?)", "输出(?)"],
       ["3☆千年血族 洛缇亚[139]", "闇属性", "攻击者", "魔族", "中体型", "领袖", "巨乳(?)", "输出", "爆发力"],
       ["3☆食梦 阿尔蒂雅[133]", "闇属性", "妨碍者", "亚人", "领袖", "贫乳", "干扰(?)", "削弱", "中体型"],
       ["3☆堕龙 凯西菲娜", "水属性", "守护者", "领袖", "亚人", "中体型", "巨乳", "防御", "回击", "生存力(?)"],
@@ -485,8 +485,8 @@
       ["3☆猫娘Vtuber 杏仁咪噜","攻击者","亚人","爆发力","小体型","贫乳","领袖","火属性"],
       ["3☆异国商人 雪蘭瑚", "水属性", "治疗者", "亚人", "支援", "回复","中体型","领袖", "保护"],
       ["3☆高等魔族 法雅", "火属性", "治疗者", "魔族", "领袖", "回复", "支援", "中体型", "保护"],
-      ["3☆传说女仆 艾蜜莉", "领袖", "光属性","辅助者","回复","人类", "中体型","支援"],
-      ["3☆千咒魔女 安西莉卡", "领袖", "闇属性","攻击者","人类(?)","亚人(?)","巨乳(?)","爆发力","越战越强"], 
+      ["3☆传说女仆 艾蜜莉", "领袖", "光属性","辅助者","回复","人类", "中体型","支援", "巨乳"],
+      ["3☆千咒魔女 安西莉卡", "领袖", "闇属性","攻击者","人类(?)","亚人(?)","爆发力","越战越强"], 
       ["3☆元气补给 莲", "领袖", "火属性","治疗者","人类(?)","回复","支援(80%)"],
       ["3☆夜星 狄", "领袖", "风属性","攻击者","人类","削弱","输出"],
 
@@ -763,20 +763,8 @@
     </table>
 
     <div id="anotation">
-    <h1>新词条·新词组收集接近尾声</h1>
-    <div style="font-size:22px">
-      角色词条<br/>
-      可点击【领袖】或【支援】按钮查看<br/>
-      最新：莲添加了【支援】【回复】词条<br/>
-      伊布增加了【群体攻击】词条<br/>
-      莲的人类词条暂时划为待确定<br/>
-      人马女仆压根没在计算器里收录，因为她连辅助者都没有<br/>
-      为雪兰瑚和法雅添加了【保护】<br/>
-    </div>
     NGA论坛天下布魔板块已经正式开放了，<a href="https://nga.178.com/thread.php?fid=-40525887">访问地址</a><br/>
-     之前的<a href="https://github.com/RShock/RShock.github.io/blob/master/update.md">更新日志</a><br />
-     当今游戏推荐充值方式：gash点卡，在淘宝买了后直接在充值页面用就可以了。方案2还是云闪付。
-
+    国内镜像站：http://47.99.93.37/
    </div>
   </div>
 </body>
