机娘添加越战越强

--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
       ["3☆法斯公主 露露[106]", "领袖", "风属性", "人类", "治疗者", "回复"],
       ["3☆魔王 伊布力斯[103]", "领袖", "光属性", "魔族", "中体型", "攻击者", "生存力", "输出", "群体攻击"],
       ["3☆蛇女之后 梅斯米奈雅[137]", "领袖", "火属性", "妨碍者", "爆发力", "贫乳", "魔族", "干扰(?)", "削弱", "中体型"],
-      ["3☆KS-VIII 魔人偶[131]", "闇属性", "攻击者", "领袖", "爆发力", "输出", "巨乳(?)", "中体型"],
+      ["3☆KS-VIII 魔人偶[131]", "闇属性", "攻击者", "领袖", "爆发力", "输出", "巨乳(?)", "中体型", "越战越强"],
       ["3☆煌星 妲斯艾菲娜[157]", "闇属性", "辅助者", "领袖", "人类", "中体型", "贫乳", "支援"],
       ["3☆复生公主 千鹤[128]", "风属性", "攻击者", "领袖", "爆发力", "输出", "中体型", "巨乳(?)", "魔族"],
       ["3☆天使长 圣米勒[107]", "光属性", "中体型", "攻击者", "领袖", "亚人(?)", "支援","巨乳(?)", "输出(?)"],
