--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
 
     /********************************数据集合**********************************************/
     var dataset = [
-      ["3☆魔王 巴尔[101]", "领袖", "火属性", "魔族", "中体型", "攻击者", "爆发力", "输出"],
+    ["3☆魔王 巴尔[101]", "领袖", "火属性", "魔族", "中体型", "攻击者", "爆发力", "输出"],
       ["3☆魔王 撒旦[102]", "领袖", "闇属性", "魔族", "中体型", "守护者", "生存力", "回击","巨乳", "防御","保护"],
       ["3☆精灵王 赛露西亚[104]", "领袖", "风属性", "亚人", "中体型", "巨乳(?)", "辅助者", "爆发力", "支援"],
       ["3☆矮人王 兰儿[105]", "领袖", "水属性", "亚人", "小体型", "贫乳", "攻击者", "爆发力","越战越强", "输出"],
@@ -479,7 +479,7 @@
       ["3☆堕龙 凯西菲娜", "水属性", "守护者", "领袖", "亚人", "中体型", "巨乳", "防御", "回击", "生存力(?)"],
       ["3☆极乐之鬼 伊吹朱点", "火属性", "攻击者", "领袖", "中体型", "输出", "亚人", "贫乳"],
       ["3☆音速魅影 祈", "风属性", "攻击者", "亚人", "中体型", "领袖", "输出", "爆发力"],
-      ["3☆古代勇者 乌鲁塔", "风属性", "守护者", "人类", "中体型", "领袖","保护"],
+      ["3☆古代勇者 乌鲁塔", "风属性", "守护者", "人类", "中体型", "领袖","保护","防御"],
       ["3☆现代勇者 神田绫音", "光属性", "攻击者", "人类", "爆发力", "输出", "领袖", "中体型"],
       ["3☆未来勇者 牧爱菈", "风属性", "妨碍者", "人类", "中体型", "削弱", "领袖", "贫乳","支援"],
       ["3☆猫娘Vtuber 杏仁咪噜","攻击者","亚人","爆发力","小体型","贫乳","领袖","火属性"],
@@ -488,7 +488,7 @@
       ["3☆传说女仆 艾蜜莉", "领袖", "光属性","辅助者","回复","人类", "中体型","支援", "巨乳"],
       ["3☆千咒魔女 安西莉卡", "领袖", "闇属性","攻击者","人类(?)","亚人(?)","爆发力","越战越强"], 
       ["3☆元气补给 莲", "领袖", "火属性","治疗者","人类(?)","回复","支援(80%)"],
-      ["3☆夜星 狄", "领袖", "风属性","攻击者","人类","削弱","输出"],
+      ["3☆夜星 狄", "领袖", "风属性","攻击者","中体型","人类","削弱","输出"],
 
       ["2☆魔管家 艾可[209]", "菁英", "闇属性", "魔族", "辅助者", "中体型", "美乳", "支援"],
       ["2☆圣骑士长 雷欧娜[210]", "菁英", "水属性", "人类", "守护者", "美乳", "中体型", "生存力", "保护", "防御"],
