添加一个统计脚本看看访问量

--- a/index.html
+++ b/index.html
@@ -133,7 +133,13 @@
   </style>
 
   <script type="text/javascript">
-
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?23403505743b054744fad3b72943b26e";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
     var tags = [];  //收集当前选中的tag
     var ans = [];   //收集最后的结果
     var propheticWords = [];  //收集固有词条组合模式用于预测
