--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           searchAndShow();
         }
       }
-      alert('本网站将于6月1日00:00将网址更换为txbm.xyz，请注意保存新网址。\n因为网址续费要70块钱，但是新买网址只要12。\n如果你习惯通过百度搜索进入本网站，可能会有几天进不了，我会尝试恢复。ps.bug修了');
+      alert('本网站已经更换为txbm.xyz，请注意保存新网址。\n如果你习惯通过百度搜索进入本网站，可能会有几天进不了，我会尝试恢复。');
     }
 
     function getDevice() {
