添加必应收录2

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta name="baidu-site-verification" content="codeva-aWs2iZOlQ9" />
+  <meta name="msvalidate.01" content="B1B15A875A9585DF44A7FF12AE519869" />
   <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
   <title>全境征才计算器</title>
   <meta name='keywords' content='天下布魔'>
