邀请码换成小号

--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
   <body style="background:rgb(230, 230, 250)" id="body">
 
   <div id="center_box">
-    <h1 style="display: inline;">全境征才计算器 3.11 by 小r</h1><small>邀请码 USHL2U</small>
+    <h1 style="display: inline;">全境征才计算器 3.11 by 小r</h1> 邀请码 53QHJN
     <button type="button" id="langSwitcher" class="btn_language" onclick="switchST()">繁简切换</button>
     <br />
 
