--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
       ["3☆音速魅影 祈", "风属性", "攻击者", "亚人", "中体型", "领袖", "输出", "爆发力"],
       ["3☆古代勇者 乌鲁塔", "风属性", "守护者", "人类", "中体型", "领袖","保护","防御"],
       ["3☆现代勇者 神田绫音", "光属性", "攻击者", "人类", "爆发力", "输出", "领袖", "中体型"],
-      ["3☆未来勇者 牧爱菈", "风属性", "妨碍者", "人类", "中体型", "削弱", "领袖", "贫乳","支援"],
+      ["3☆未来勇者 牧爱菈", "风属性", "妨碍者", "人类", "中体型", "削弱", "领袖", "贫乳(确认到本词条请于贴吧反馈)","支援"],
       ["3☆猫娘Vtuber 杏仁咪噜","攻击者","亚人","爆发力","小体型","贫乳","领袖","火属性"],
       ["3☆异国商人 雪蘭瑚", "水属性", "治疗者", "亚人", "支援", "回复","中体型","领袖", "保护"],
       ["3☆高等魔族 法雅", "火属性", "治疗者", "魔族", "领袖", "回复", "支援", "中体型", "保护"],
