--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
     var dataset = [
     ["3☆魔王 巴尔[101]", "领袖", "火属性", "魔族", "中体型", "攻击者", "爆发力", "输出"],
       ["3☆魔王 撒旦[102]", "领袖", "闇属性", "魔族", "中体型", "守护者", "生存力", "回击","巨乳", "防御","保护"],
-      ["3☆精灵王 赛露西亚[104]", "领袖", "风属性", "亚人", "中体型", "巨乳(?)", "辅助者", "爆发力", "支援"],
+      ["3☆精灵王 赛露西亚[104]", "领袖", "风属性", "亚人", "中体型", "巨乳", "辅助者", "爆发力", "支援"],
       ["3☆矮人王 兰儿[105]", "领袖", "水属性", "亚人", "小体型", "贫乳", "攻击者", "爆发力","越战越强", "输出"],
       ["3☆法斯公主 露露[106]", "领袖", "风属性", "人类", "治疗者", "回复"],
       ["3☆魔王 伊布力斯[103]", "领袖", "光属性", "魔族", "中体型", "攻击者", "生存力", "输出", "群体攻击"],
@@ -483,7 +483,7 @@
       ["3☆古代勇者 乌鲁塔", "风属性", "守护者", "人类", "中体型", "领袖","保护","防御"],
       ["3☆现代勇者 神田绫音", "光属性", "攻击者", "人类", "爆发力", "输出", "领袖", "中体型"],
       ["3☆未来勇者 牧爱菈", "风属性", "妨碍者", "人类", "中体型", "削弱", "领袖", "贫乳(确认到本词条请于贴吧反馈)","支援"],
-      ["3☆猫娘Vtuber 杏仁咪噜","攻击者","亚人","爆发力","小体型","贫乳","领袖","火属性"],
+      ["3☆猫娘Vtuber 杏仁咪噜","攻击者","亚人","爆发力","小体型","贫乳","领袖","火属性", "生存力"],
       ["3☆异国商人 雪蘭瑚", "水属性", "治疗者", "亚人", "支援", "回复","中体型","领袖", "保护"],
       ["3☆高等魔族 法雅", "火属性", "治疗者", "魔族", "领袖", "回复", "支援", "中体型", "保护"],
       ["3☆传说女仆 艾蜜莉", "领袖", "光属性","辅助者","回复","人类", "中体型","支援", "巨乳"],
