新增白 莫默

--- a/index.html
+++ b/index.html
@@ -490,6 +490,8 @@
       ["3☆千咒魔女 安西莉卡", "领袖", "闇属性","攻击者","人类(?)","亚人(?)","爆发力","越战越强","输出"], 
       ["3☆元气补给 莲", "领袖", "火属性","治疗者","人类(?)","回复","支援(80%)"],
       ["3☆夜星 狄", "领袖", "风属性","攻击者","中体型","人类","削弱","输出"],
+      ["3☆贤者 白","领袖", "风属性", "治疗者", "亚人", "中体型", "支援", "回复"],
+      ["3☆毒蝎 莫默","领袖", "水属性", "攻击者", "魔族", "中体型", "贫乳", "爆发力", "输出"],
 
       ["2☆魔管家 艾可[209]", "菁英", "闇属性", "魔族", "辅助者", "中体型", "美乳", "支援"],
       ["2☆圣骑士长 雷欧娜[210]", "菁英", "水属性", "人类", "守护者", "美乳", "中体型", "生存力", "保护", "防御"],
@@ -772,6 +774,7 @@
     </table>
 
     <div id="anotation">
+      贤者白、毒蝎默莫已经加入征才，更新时间：2023.11.5<br/>
     NGA论坛天下布魔板块已经正式开放了，<a href="https://nga.178.com/thread.php?fid=-40525887">访问地址</a><br/>
     国内镜像站：http://47.99.93.37/
    </div>
