新增默默 塞希

--- a/index.html
+++ b/index.html
@@ -538,7 +538,9 @@
       ["0☆法斯高阶法师 诺诺可[418]", "水属性", "攻击者", "人类", "中体型", "美乳", "输出", "士兵", "爆发力"],
       ["0☆法斯精锐骑士 布兰[417]", "风属性", "攻击者", "人类", "中体型", "美乳", "输出", "防御", "士兵"],
       ["0☆惩戒天使[419]", "水属性", "守护者", "士兵", "生存力", "中体型", "回击", "群体攻击", "美乳", "亚人"],
-      ["0☆福音天使[420]", "水属性", "治疗者", "士兵", "保护", "美乳", "中体型"]
+      ["0☆福音天使[420]", "水属性", "治疗者", "士兵", "保护", "美乳", "中体型"],
+      ["0☆木乃伊 穆穆", "暗属性", "生存力", "妨碍者", "中体型", "保护", "干扰", "美乳"],
+      ["0☆人马 赛希", "风属性", "巨乳", "中体型", "攻击者", "亚人", "爆发力"]
     ]
 
     var propheticWords = ["中体型,亚人,削弱,回击,领袖",
