--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
       ["0☆法斯精锐骑士 布兰[417]", "风属性", "攻击者", "人类", "中体型", "美乳", "输出", "防御", "士兵"],
       ["0☆惩戒天使[419]", "水属性", "守护者", "士兵", "生存力", "中体型", "回击", "群体攻击", "美乳", "亚人"],
       ["0☆福音天使[420]", "水属性", "治疗者", "士兵", "保护", "美乳", "中体型"],
-      ["0☆木乃伊 穆穆", "暗属性", "生存力", "妨碍者", "中体型", "保护", "干扰", "美乳"],
+      ["0☆木乃伊 穆穆", "闇属性", "生存力", "妨碍者", "中体型", "保护", "干扰", "美乳"],
       ["0☆人马 赛希", "风属性", "巨乳", "中体型", "攻击者", "亚人", "爆发力"]
     ]
 
