--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@
   </style>
 
   <script type="text/javascript">
+    alert('本页面网址已切换为tkfm.online，原地址于28日失效，请及时切换！！！')
+
     var tags = [];  //收集当前选中的tag
     var ans = [];   //收集最后的结果
     var propheticWords = [];  //收集固有词条组合模式用于预测
@@ -776,8 +778,8 @@
     </table>
 
     <div id="anotation">
-      贤者白、毒蝎默莫已经加入征才，更新时间：2023.11.5<br/>
-    NGA论坛天下布魔板块已经正式开放了，<a href="https://nga.178.com/thread.php?fid=-40525887">访问地址</a><br/>
+    <h1 style="color: red">本页面网址已切换为tkfm.online，原地址于28日失效，请及时切换！！！</h1>
+
     国内镜像站：http://47.99.93.37/
    </div>
   </div>
