--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
   </style>
 
   <script type="text/javascript">
-    alert('本页面网址已切换为tkfm.online，原地址于28日失效，请及时切换！！！')
+    alert('本页面网址已切换为tkfm.online，原地址于28日失效，即将自动跳转至新页面')
+    window.location.href='https://tkfm.online'
 
     var tags = [];  //收集当前选中的tag
     var ans = [];   //收集最后的结果
@@ -778,7 +779,7 @@
     </table>
 
     <div id="anotation">
-    <h1 style="color: red">本页面网址已切换为tkfm.online，原地址于28日失效，请及时切换！！！</h1>
+    <h1 style="color: red">本页面网址已切换为tkfm.online，原地址于28日失效，请及时切换！！！<br/></h1>
 
     国内镜像站：http://47.99.93.37/
    </div>
