更新部分词条

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
   <title>全境征才计算器</title>
   <meta name='keywords' content='天下布魔'>
-  <meta name='description' content='3.11 by 小r 雪兰瑚等已加入全境！'>
+  <meta name='description' content='3.13 by 小r  更新时间2024年8月3日'>
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
@@ -135,8 +135,6 @@
   </style>
 
   <script type="text/javascript">
-    alert('本页面网址已切换为tkfm.online，原地址于28日失效，即将自动跳转至新页面')
-    window.location.href='https://tkfm.online'
 
     var tags = [];  //收集当前选中的tag
     var ans = [];   //收集最后的结果
@@ -480,12 +478,12 @@
       ["3☆天使长 圣米勒[107]", "光属性", "中体型", "攻击者", "领袖", "亚人(?)", "支援","巨乳(?)", "输出(?)"],
       ["3☆千年血族 洛缇亚[139]", "闇属性", "攻击者", "魔族", "中体型", "领袖", "巨乳(?)", "输出", "爆发力"],
       ["3☆食梦 阿尔蒂雅[133]", "闇属性", "妨碍者", "亚人", "领袖", "贫乳", "干扰(?)", "削弱", "中体型"],
-      ["3☆堕龙 凯西菲娜", "水属性", "守护者", "领袖", "亚人", "中体型", "巨乳", "防御", "回击", "生存力(?)"],
+      ["3☆堕龙 凯西菲娜", "水属性", "守护者", "领袖", "亚人", "中体型", "巨乳", "防御", "回击", "生存力(?)", "保护"],
       ["3☆极乐之鬼 伊吹朱点", "火属性", "攻击者", "领袖", "中体型", "输出", "亚人", "贫乳"],
       ["3☆音速魅影 祈", "风属性", "攻击者", "亚人", "中体型", "领袖", "输出", "爆发力"],
       ["3☆古代勇者 乌鲁塔", "风属性", "守护者", "人类", "中体型", "领袖","保护","防御"],
       ["3☆现代勇者 神田绫音", "光属性", "攻击者", "人类", "爆发力", "输出", "领袖", "中体型"],
-      ["3☆未来勇者 牧爱菈", "风属性", "妨碍者", "人类", "中体型", "削弱", "领袖", "贫乳(确认到本词条请于贴吧反馈)","支援"],
+      ["3☆未来勇者 牧爱菈", "风属性", "妨碍者", "人类", "中体型", "削弱", "领袖","支援"],
       ["3☆猫娘Vtuber 杏仁咪噜","攻击者","亚人","爆发力","小体型","贫乳","领袖","火属性", "生存力"],
       ["3☆异国商人 雪蘭瑚", "水属性", "治疗者", "亚人", "支援", "回复","中体型","领袖", "保护"],
       ["3☆高等魔族 法雅", "火属性", "治疗者", "魔族", "领袖", "回复", "支援", "中体型", "保护"],
@@ -508,7 +506,7 @@
       ["2☆魔法少女 托特拉[238]", "菁英", "光属性", "攻击者", "中体型", "人类", "爆发力", "美乳", "削弱", "输出"],
       ["2☆最后的银龙 普利特拉", "闇属性", "菁英", "妨碍者", "亚人", "中体型", "削弱", "美乳"],
       ["2☆刺针 嘉维尔", "风属性", "攻击者", "菁英", "美乳", "人类", "中体型", "输出"],
-      ["2☆精灵舞者 塔诺西雅", "菁英", "光属性","辅助者","亚人", "回复(?)","美乳","中体型"],
+      ["2☆精灵舞者 塔诺西雅", "菁英", "光属性","辅助者","亚人", "回复","美乳","中体型"],
       ["2☆工会看板娘 小萤", "菁英",  "水属性","治疗者", "支援", "人类", "贫乳","回复","中体型"],
 
       ["1☆流浪魔法师 尤依[307]", "火属性", "攻击者", "人类", "巨乳", "小体型", "越战越强", "输出"],
@@ -520,6 +518,7 @@
       ["1☆魅魔 撒芭丝[305]", "闇属性", "妨碍者", "魔族", "美乳", "干扰", "削弱", "中体型"],
       ["1☆闇黑精灵 索拉卡[308]", "闇属性", "妨碍者", "亚人", "中体型", "削弱", "美乳"],
       ["1☆白蔷薇 伊艾", "光属性","治疗者", "人类", "贫乳", "小体型","回复"],
+      ["1☆冷艳美医 嘉莉娜", "无词条"],
 
       ["0☆法斯帝国法师 佩托拉[402]", "光属性", "攻击者", "人类", "贫乳", "中体型", "群体攻击", "输出", "士兵"],
       ["0☆矮人战士 可儿[408]", "水属性", "攻击者", "亚人", "贫乳", "小体型", "输出", "爆发力", "士兵"],
@@ -543,7 +542,7 @@
       ["0☆惩戒天使[419]", "水属性", "守护者", "士兵", "生存力", "中体型", "回击", "群体攻击", "美乳", "亚人"],
       ["0☆福音天使[420]", "水属性", "治疗者", "士兵", "保护", "美乳", "中体型"],
       ["0☆木乃伊 穆穆", "闇属性", "生存力", "妨碍者", "中体型", "保护", "干扰", "美乳"],
-      ["0☆人马 赛希", "风属性", "巨乳", "中体型", "攻击者", "亚人", "爆发力"]
+      ["0☆人马 赛希", "风属性", "巨乳", "中体型", "攻击者", "亚人", "爆发力", "输出"]
     ]
 
     var propheticWords = ["中体型,亚人,削弱,回击,领袖",
@@ -721,7 +720,7 @@
   <body style="background:rgb(230, 230, 250)" id="body">
 
   <div id="center_box">
-    <h1 style="display: inline;">全境征才计算器 3.11 by 小r</h1> 邀请码 53QHJN
+    <h1 style="display: inline;">全境征才计算器 3.13 by 小r</h1> 邀请码 53QHJN
     <button type="button" id="langSwitcher" class="btn_language" onclick="switchST()">繁简切换</button>
     <br />
 
@@ -779,9 +778,20 @@
     </table>
 
     <div id="anotation">
-    <h1 style="color: red">本页面网址已切换为tkfm.online，原地址于28日失效，请及时切换！！！<br/></h1>
+    <h1 style="color: red">本页面网址已切换为tkfm.online<br/></h1>
+    <div>
+      24年8月3日更新内容：<br/>
+      SSR：<br/>
+      堕龙：添加保护词条<br/>
+      牧爱拉：移除贫乳词条，现在人类+贫乳只有煌星了<br/>
+      SR:<br/>
+      精灵舞者：确定回复词条<br/>
+      R，N:<br/>
+      人马：添加输出词条<br/>
+      冷艳美医 嘉莉娜：添加，只有不选词条才能出<br/>
+      ps.如果我不更新，一定是因为官方没更新。
+    </div>
 
-    国内镜像站：http://47.99.93.37/
    </div>
   </div>
 </body>
