初步更新茉莉 安雅词条

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
   <title>全境征才计算器</title>
   <meta name='keywords' content='天下布魔'>
-  <meta name='description' content='3.13 by 小r  更新时间2024年8月3日'>
+  <meta name='description' content='3.14 by 小r  更新时间2024年10月22日'>
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
@@ -542,7 +542,10 @@
       ["0☆惩戒天使[419]", "水属性", "守护者", "士兵", "生存力", "中体型", "回击", "群体攻击", "美乳", "亚人"],
       ["0☆福音天使[420]", "水属性", "治疗者", "士兵", "保护", "美乳", "中体型"],
       ["0☆木乃伊 穆穆", "闇属性", "生存力", "妨碍者", "中体型", "保护", "干扰", "美乳"],
-      ["0☆人马 赛希", "风属性", "巨乳", "中体型", "攻击者", "亚人", "爆发力", "输出"]
+      ["0☆人马 赛希", "风属性", "巨乳", "中体型", "攻击者", "亚人", "爆发力", "输出"],
+      ["0☆猎犬小队 茉莉", "水属性", "人类", "贫乳"],
+      ["0☆猎犬小队 安雅", "风属性", "人类"],
+
     ]
 
     var propheticWords = ["中体型,亚人,削弱,回击,领袖",
@@ -720,7 +723,7 @@
   <body style="background:rgb(230, 230, 250)" id="body">
 
   <div id="center_box">
-    <h1 style="display: inline;">全境征才计算器 3.13 by 小r</h1> 邀请码 53QHJN
+    <h1 style="display: inline;">全境征才计算器 3.14 by 小r</h1> 邀请码 53QHJN
     <button type="button" id="langSwitcher" class="btn_language" onclick="switchST()">繁简切换</button>
     <br />
 
@@ -776,20 +779,14 @@
       </thead>
       <tbody id="tbMain"></tbody>
     </table>
-
+<!-- 
     <div id="anotation">
-    <h1 style="color: red">本页面网址已切换为tkfm.online<br/></h1>
+    <h1 style="color: red">本页面网址已切换为tkfm.online<br/></h1> -->
     <div>
-      24年8月3日更新内容：<br/>
-      SSR：<br/>
-      堕龙：添加保护词条<br/>
-      牧爱拉：移除贫乳词条，现在人类+贫乳只有煌星了<br/>
-      SR:<br/>
-      精灵舞者：确定回复词条<br/>
-      R，N:<br/>
-      人马：添加输出词条<br/>
-      冷艳美医 嘉莉娜：添加，只有不选词条才能出<br/>
-      ps.如果我不更新，一定是因为官方没更新。
+      <h1 style="display: inline;"> 24年10月22日更新内容：<br/>
+        N卡茉莉：人类 水属性 贫乳<br/>
+        N卡安雅：人类 风属性<br/>
+      其他可能词条收集中</h1> 
       
     </div>
 
