更新补充说明

--- a/index.html
+++ b/index.html
@@ -786,7 +786,8 @@
       <h1 style="display: inline;"> 24年10月22日更新内容：<br/>
         N卡茉莉：人类 水属性 贫乳<br/>
         N卡安雅：人类 风属性<br/>
-      其他可能词条收集中</h1> 
+      其他可能词条收集中<br/>
+     ps.经过排查 水+人+贫不再可以必出小萤，但是这3个词只会和领袖同时出现所以无所谓。</h1> 
       
     </div>
 
