补充更新词条

--- a/index.html
+++ b/index.html
@@ -541,10 +541,10 @@
       ["0☆法斯精锐骑士 布兰[417]", "风属性", "攻击者", "人类", "中体型", "美乳", "输出", "防御", "士兵"],
       ["0☆惩戒天使[419]", "水属性", "守护者", "士兵", "生存力", "中体型", "回击", "群体攻击", "美乳", "亚人"],
       ["0☆福音天使[420]", "水属性", "治疗者", "士兵", "保护", "美乳", "中体型"],
-      ["0☆木乃伊 穆穆", "闇属性", "生存力", "妨碍者", "中体型", "保护", "干扰", "美乳"],
-      ["0☆人马 赛希", "风属性", "巨乳", "中体型", "攻击者", "亚人", "爆发力", "输出"],
-      ["0☆猎犬小队 茉莉", "水属性", "人类", "贫乳"],
-      ["0☆猎犬小队 安雅", "风属性", "人类"],
+      ["0☆木乃伊 穆穆", "闇属性", "生存力", "妨碍者", "中体型", "保护", "干扰", "美乳","士兵"],
+      ["0☆人马 赛希", "风属性", "巨乳", "中体型", "攻击者", "亚人", "爆发力", "输出","士兵"],
+      ["0☆猎犬小队 茉莉", "水属性", "人类", "贫乳", "攻击者", "小体型","士兵"],
+      ["0☆猎犬小队 安雅", "风属性", "妨碍者","士兵","人类"],
 
     ]
 
@@ -784,8 +784,8 @@
     <h1 style="color: red">本页面网址已切换为tkfm.online<br/></h1> -->
     <div>
       <h1 style="display: inline;"> 24年10月22日更新内容：<br/>
-        N卡茉莉：人类 水属性 贫乳<br/>
-        N卡安雅：人类 风属性<br/>
+        N卡茉莉：人类 水属性 贫乳 攻击者 小体型 士兵<br/>
+        N卡安雅：人类 妨碍者 风属性 士兵<br/>
       其他可能词条收集中<br/>
      ps.经过排查 水+人+贫不再可以必出小萤，但是这3个词只会和领袖同时出现所以无所谓。</h1> 
       
