--- a/index.html
+++ b/index.html
@@ -779,16 +779,10 @@
       </thead>
       <tbody id="tbMain"></tbody>
     </table>
-<!-- 
-    <div id="anotation">
-    <h1 style="color: red">本页面网址已切换为tkfm.online<br/></h1> -->
-    <div>
-      <h1 style="display: inline;"> 24年10月22日更新内容：<br/>
-        N卡茉莉：人类 水属性 贫乳 攻击者 小体型 士兵<br/>
-        N卡安雅：人类 妨碍者 风属性 士兵<br/>
-      其他可能词条收集中<br/>
-     ps.经过排查 水+人+贫不再可以必出小萤，但是这3个词只会和领袖同时出现所以无所谓。</h1> 
-      
+    <div>      
+      <h1 style="font-size: 50px;">
+      服务器登不上去的，可以购买此VPN：<a href="https://9ce.lanpangyun.pro/#/register?code=6jUoWPvh">点击这里</a><br/>
+      8块钱一个月，亲测稳定可用，台湾节点可进游戏</h1>
     </div>
 
    </div>
