添加推广链接

--- a/index.html
+++ b/index.html
@@ -780,6 +780,13 @@
       <tbody id="tbMain"></tbody>
     </table>
     <div>      
+      <h2 style="font-size: 30px;">
+      推荐一款挂机游戏《银河奶牛放置》，风格类似《梅尔沃放置》，全球共服，氛围友好，更新频繁。<br/>
+      游戏作者不缺钱，游戏不氪，有多种游戏风格。最近登陆steam增加了3千个玩家，可以一起成长。<br/>
+      游戏支持网页（体验最好）、手机、steam。禁止注册多个账号。<br/>
+      通过<a href="https://www.milkywayidle.com/?ref=158404">本链接</a>注册可在达到400级时私信@XiaoR领取500万启动资金。<br/>
+
+      </h2>
       <h1 style="font-size: 50px;">
       服务器登不上去的，可以购买此VPN：<a href="https://9ce.lanpangyun.pro/#/register?code=6jUoWPvh">点击这里</a><br/>
       8块钱一个月，亲测稳定可用，台湾节点可进游戏</h1>
