更新游戏推荐链接

--- a/index.html
+++ b/index.html
@@ -701,7 +701,8 @@
       "贫乳,防御,领袖,巨乳,水属性",//22年11.30
       "风属性,领袖,越战越强,保护,支援",//22年11.30
       "群体攻击,削弱,闇属性,输出,领袖",//12.3
-      "辅助者,火属性,领袖,亚人,回复" //12.5
+      "辅助者,火属性,领袖,亚人,回复", //12.5
+      "贫乳,防御,辅助者,领袖,回复" //2025.5.16
     ];
 
 
@@ -782,7 +783,7 @@
     <div>      
       <h2 style="font-size: 30px;">
       推荐一款网页挂机游戏《银河奶牛放置》，风格类似《梅尔沃放置》，全球共服，氛围友好，更新频繁。<br/>
-      游戏作者不缺钱，游戏不氪，有多种游戏风格。最近登陆steam增加了3千个玩家，可以一起成长。<br/>
+      游戏作者不缺钱，游戏不氪，有多种游戏风格。<br/>
       游戏支持网页（体验最好）、手机、steam。禁止注册多个账号。<br/>
       游戏链接：<a href="https://www.milkywayidle.com/?ref=158404">点击此处</a>
 
