更新页面和广告

--- a/index.html
+++ b/index.html
@@ -132,6 +132,11 @@
       border-radius: 10px;
       padding: 10px;
     }
+
+    .invite-code {
+      font-size: 28px;
+      margin-left: 10px;
+    }
   </style>
 
   <script type="text/javascript">
@@ -724,7 +729,7 @@
   <body style="background:rgb(230, 230, 250)" id="body">
 
   <div id="center_box">
-    <h1 style="display: inline;">全境征才计算器 3.14 by 小r</h1> 邀请码 53QHJN
+    <h1 style="display: inline;">全境征才计算器 3.14 by 小r</h1> <span class="invite-code">邀请码 USHL2U</span>
     <button type="button" id="langSwitcher" class="btn_language" onclick="switchST()">繁简切换</button>
     <br />
 
@@ -780,17 +785,13 @@
       </thead>
       <tbody id="tbMain"></tbody>
     </table>
-    <div>      
-      <h2 style="font-size: 30px;">
-      推荐一款网页挂机游戏《银河奶牛放置》，风格类似《梅尔沃放置》，全球共服，氛围友好，更新频繁。<br/>
-      游戏作者不缺钱，游戏不氪，有多种游戏风格。<br/>
+    <div class="invite-code">      
+      推荐一款网页挂机游戏《银河奶牛放置》，风格类似《梅尔沃放置》的网游版。<br/>
       游戏支持网页（体验最好）、手机、steam。禁止注册多个账号。<br/>
-      游戏链接：<a href="https://www.milkywayidle.com/?ref=158404">点击此处</a>
+      游戏链接：<a href="https://www.milkywayidle.com/?ref=158404">点击此处</a><br/>
 
-      </h2>
-      <h1 style="font-size: 50px;">
-      游戏登不上去的，可以购买此VPN：<a href="https://9ce.lanpangyun.pro/#/register?code=6jUoWPvh">点击这里</a><br/>
-      8块钱一个月，亲测稳定可用，台湾节点可进游戏</h1>
+      游戏登不上去的，可以购买此VPN：<a href="https://lanpangyun.one/#/register?code=6jUoWPvh">点击这里</a><br/>
+      8块钱一个月，亲测稳定可用，台湾节点可进游戏
     </div>
 
    </div>
